Wed Feb 18 10:11:42 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* CCF/CCF/CIDL/CIDL.mpc:
	* CCF/CCF/CodeGenerationKit/CodeGenerationKit.mpc:
	* CCF/CCF/CompilerElements/CompilerElements.mpc:
	* CCF/CCF/IDL2/IDL2.mpc:
	* CCF/CCF/IDL3/IDL3.mpc:

	  Changed these MPC files to specify the output lib path.

Wed Feb 18 14:05:13 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

	* CCF/CCF/CCF.mwc:
	  Removed this file, it has an error and is not needed.

Tue Feb 17 01:18:16 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* examples/Hello/Receiver/Receiver_exec.cpp:
	* examples/OEP/BasicSP/BMClosedED/BMClosedED_exec.cpp:
	* examples/OEP/BasicSP/BMDevice/BMDevice_exec.cpp:
	* examples/OEP/BasicSP/BMDisplay/BMDisplay_exec.cpp:
	* examples/OEP/Display/NavDisplay/NavDisplay_exec.cpp:
	* examples/OEP/Display/RateGen/RateGen_exec.cpp:
	* examples/OEP/Display/RateGen/client.cpp:
	* examples/OEP/Display/RateGen/controller.cpp:

	  Fixed the code for exception safety when exceptions are
	  disabled. I don't claim that I have caught everything, but
	  should have most of the problems. Another pass is required to fix
	  the remaining problems.

Mon Feb 16 20:01:19 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* CIDLC/CIDLC.mwc:

	  Added the mpc files from CCF in there. This will make it easier
	  for the users. Users just need to go to $CIAO_ROOT/CIDLC and
	  type mwc.pl CIDLC.mwc and then a make. They need not go to go
	  and build CCF specifically. But this has a hitch that Tao needs
	  to fix. The CCF libraries should be installed in $CIAO_ROOT/lib
	  for this to work fine. Tao has accepted to fix this.

	* CIDLC/Literals.cpp:
	* CIDLC/Literals.hpp:
	* CIDLC/ServantHeaderGenerator.cpp:
	* CIDLC/ServantSourceGenerator.cpp:

	  Bunch of wrong environment macro usage. This should fix the
	  problems that Brian Mendel reported. Thanks to Brian for
	  reporting this.

	  These fixes wouldn't have taken so long. The CIDLC linking takes