@@ -63,6 +63,18 @@ All these diagrams are generating from the <a href="imgs/CCM.vsd">CCM.vsd
 Visio file</a> (The same file in Visio V.5 format is <a href="imgs/CCM-v5.vsd">here</a>.)
 
 
+<h2>CIAO-tutorials</h2>
+
+We have two Hello tutorials to help the user to understand CCM/CIAO.
+
+<UL>
+  <li><code>$(CIAO_ROOT)/docs/tutorial/Hello.</code> This example shows the low level infomation about CIAO Component/Component Home creation and deletion.</li>
+
+  <li><code>$(CIAO_ROOT)/examples/Hello.</code> This example illustrates how to build a CIAO based application <a href="../examples/Hello/step-by-step.html">step-by-step</a>. There is also a detailed documentation explaining this example avalable in both <a href="http://www.dre.vanderbilt.edu/~lu/CCM/CCM_Hello_example.PDF"> PDF</a> and <a href="http://www.dre.vanderbilt.edu/~lu/CCM/CCM_Hello_example.ppt"> PowerPoint</a> format.</li>
+
+</UL>
+
+
 <!--#include virtual="/~nanbor/signature.html" -->
 <!-- <hr> -->
 <!-- <\!-- hhmts start -\-> -->
