@@ -1,3 +1,9 @@
+Wed Feb 18 10:43:54 2004  Tao Lu  <lu@dre.vanderbilt.edu>
+
+	* docs/index.html:
+
+	 Added the tutorial section in this file.
+
 Wed Feb 18 10:11:42 2004  Tao Lu  <lu@dre.vanderbilt.edu>
 
 	* CCF/CCF/CIDL/CIDL.mpc:
